--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@ Skype: amgauna@hotmail.com
 * Analista de Sistemas e Negócios <br>
 * Gestão de Projetos TI <br>
 * Analista de Suporte Técnico Senior <br>
-* Analista de Infraestrutura <br>
-  Cliente-Servidor Windows <br>
+* Analista Infraestrutura Servidor <br>
 * Serviços Data Analytics <br>
 * Suporte Técnico <br>
 * Manutenção Preventiva <br>
