--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@ Skype: amgauna@hotmail.com
 * Gestão de Projetos TI <br>
 * Analista de Suporte Técnico Senior <br>
 * Analista Infraestrutura Servidor <br>
-* Serviços Data Analytics <br>
-* Suporte Técnico <br>
+* Suporte Técnico / Data Analytics <br>
 * Manutenção Preventiva <br>
 * Backup/Restore SQL Server <br>
 * Instalação de equipamentos <br>
