--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ WhatsApp: +55 (21) 97937-1230 <br>
 Hangounts: amgauna@gmail.com <br>
 Skype: amgauna@hotmail.com
   <p> </p>
+<span style="color:blue";>
 * IT Consultant | CEO | CTO <br>
 * Senior Business Systems Analyst <br>
 * Project Business Management <br>
@@ -58,8 +59,9 @@ Skype: amgauna@hotmail.com
 * Criação de Sites e Blogs <br>
 * Edição de Imagem, Logotipo <br>
 Lettering / Banner / Flyer <br>
-  <p>  </p>
- </div>
+</span>
+<p> </p>
+</div>
   
  <div class="col-md-4">
   Twitter: @amgauna @anagaunatech <br>
