--- a/index.html
+++ b/index.html
@@ -30,14 +30,19 @@
 <div class="col-md-3" align="left">
 <img src="/amgauna.github.io/AnaGauna-2016.jpg" width="150" height="150">  
   <p> </p>
-CRA-RJ: 03-03161 <br>
-CNPJ: 029.052.589/0001-53 <br>
-Microsoft Partner: 5126593 <br>
+<span style="color:blue";>
+  CRA-RJ: 03-03161 <br> </span>
+<span style="color:brown";>
+CNPJ: 029.052.589/0001-53 <br> </span>
+<span style="color:red";>  
+Microsoft Partner: 5126593 <br> </span>
   <p> </p>
 Nacionalidade: Brasileira <br>
 Cidade/UF:  Rio de Janeiro/RJ <br>
   <p> </p>
+<span style="color:green";>
 WhatsApp: +55 (21) 97937-1230 <br>
+</span>
 Hangounts: amgauna@gmail.com <br>
 Skype: amgauna@hotmail.com
   <p> </p>
