--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <p> </p>
 <span style="color:blue";>
   CRA-RJ: 03-03161 <br> </span>
-<span style="color:brown";>
+<span style="color:darkblue";>
 CNPJ: 029.052.589/0001-53 <br> </span>
-<span style="color:red";>  
+<span style="color:brown";>  
 Microsoft Partner: 5126593 <br> </span>
   <p> </p>
 Nacionalidade: Brasileira <br>
@@ -93,28 +93,36 @@ Instagram: @amgauna @anagaunatech <br>
   <p>
   Gravatar: <a href="https://pt.gravatar.com/amgauna"> https://pt.gravatar.com/amgauna </a>
   <p> </p> <br>
+  <span style="color:darkred";>
    <b> <u> Management </u> </b> <br>
   * Administração & Controle <br> * Organização & Métodos <br> * Contabilidade & Finanças <br>
   * Direito & Legislação <br> * Psicologia <br> * Matemática Financeira <br> * Estatística <br>
   * Adminsitração de Projetos <br> * Direito Digital <br> * Privacidade Digital <br> 
   * Big Data <br> * Data Analytics <br> * Inteligência Artificial <br> * Data Science <br>
+   </span>
     <p> </p>
 </div>
 
 <div class="col-md-3">
+ <span style="color:darkred";>
   <b> <u> Sistema Operacional </u> </b> <br>
+  </span>
 * Linux <br> * MS-DOS <br> * Windows NT4 Server <br>  * Windows 3.11 <br> * Windows 95 <br> * Windows 98 <br> 
 * Windows 2000 Server <br> * Windows Vista <br> * Windows XP <br>
 * Windows 2012 Server <br>  * Windows 7 <br> * Windows 8 <br> * Windows 2016 Server <br> * Windows 10 <br>  
 <p> </p>
+  <span style="color:darkred";>
   <b> <u> Banco de Dados </u> </b> <br>
+  </span>
 * DBase III Plus <br> * CA-Clipper5 <br>
 * Microsoft Access <br> * Microsoft FoxPRO <br>
 * Microsof SQL 2000 Server <br>  * Microsof SQL 2008 Server <br> 
 * Microsof SQL 2012 Express <br> * Microsof SQL 2014 Express <br>
 * Microsof SQL 2008 Server <br>  * Microsof SQL 2016 Server <br> 
 <p> </p>
+  <span style="color:darkred";>
   <b> <u> Antivírus / SSL </u> </b> <br>
+  </span>
 * Symantec Norton <br> * Kaspersky Security <br> * Intel McAfee Security <br> * ESET Security <br> 
 * Trend Micro Security <br> * AVG Security <br> * AVAST Security <br>
  <p> </p>  
@@ -124,18 +132,26 @@ Instagram: @amgauna @anagaunatech <br>
 <div class="col-md-2">
  * IBM Lotus 1-2-3 <br>
   <p> </p>
+  <span style="color:darkred";>
   <b> <u> MS Office 365 </u> </b> <br>
+  </span>
 * MS Word <br> * MS Excel <br> * PowerPoint <br> * MS Access <br> 
 * MS Visio <br> * MS Project <br>
 <p> </p>
+  <span style="color:darkred";>
   <b> <u> Graphic Design </u> </b> <br>
+  </span>
 * Corel Draw <br> * Adobe Photoshop <br> * PaintShop Pro <br>
 <p> </p> 
+  <span style="color:darkred";>
   <b> <u> Programação Web </u> </b> <br>
+  </span>
 * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS3 <br> * JavaScript <br> 
 * Bootstrap 3.3.7 <br> * Java <br> * PHP5 <br> * PHP7 <br>  * Wordpress <br> * Blogger <br>
  <p> </p>
+  <span style="color:darkred";>
   <b> <u> Security </u> </b> <br>
+  </span>
   * <b> ABNT ISO 27000 </b> <br> * <b> ABNT ISO-27001 </b> <br> * <b> ABNT ISO-27002 </b> <br> * <b> ABNT ISO-27003 </b> <br> 
 * Axelos ITIL3 <br> * Isaca Cobit5 <br> * PMI <br> * CompTIA <br>
     <p> </p>
