--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ Instagram: @amgauna @anagaunatech <br>
   <p> </p> <br>
   <span style="color:darkred";>
    <b> <u> Management </u> </b> <br>
+   </span>
   * Administração & Controle <br> * Organização & Métodos <br> * Contabilidade & Finanças <br>
   * Direito & Legislação <br> * Psicologia <br> * Matemática Financeira <br> * Estatística <br>
   * Adminsitração de Projetos <br> * Direito Digital <br> * Privacidade Digital <br> 
