--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@ Instagram: @amgauna @anagaunatech <br>
   <span style="color:darkred";>
   <b> <u> Security </u> </b> <br>
   </span>
+  <span style="color:violet";>
   * <b> ABNT ISO 27000 </b> <br> * <b> ABNT ISO-27001 </b> <br> * <b> ABNT ISO-27002 </b> <br> * <b> ABNT ISO-27003 </b> <br> 
+  </span>
 * Axelos ITIL3 <br> * Isaca Cobit5 <br> * PMI <br> * CompTIA <br>
     <p> </p>
 </div>  
