--- a/index.html
+++ b/index.html
@@ -68,19 +68,15 @@ Lettering / Banner / Flyer <br>
 <p> </p>
 </div>
   
- <div class="col-md-4">
-  Twitter: @amgauna @anagaunatech <br>
-<p>
+<div class="col-md-4">
+Twitter: @amgauna @anagaunatech <br>
 Instagram: @amgauna @anagaunatech <br>
- <p>
- GitHUB: @amgauna
-  <p>
-  Site:  <a href="http://www.amgauna.com.br"> http://www.amgauna.com.br </a>
+GitHUB: @amgauna <br>
 <p>
+  Site:  <a href="http://www.amgauna.com.br"> http://www.amgauna.com.br </a> br>
   Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
 <p>
-  Blog:  <a href="http://anagauna.wordpress.com"> http://anagauna.wordpress.com </a>
-<p>
+  Blog:  <a href="http://anagauna.wordpress.com"> http://anagauna.wordpress.com </a> <br>
   Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a>
  <p>
   Linkedin: <a href="https://www.linkedin.com/in/amgauna"> https://www.linkedin.com/in/amgauna </a>
