--- a/index.html
+++ b/index.html
@@ -71,23 +71,18 @@ Lettering / Banner / Flyer <br>
 <div class="col-md-4">
 Twitter: @amgauna @anagaunatech <br>
 Instagram: @amgauna @anagaunatech <br>
-GitHUB: @amgauna <br>
+GitHUB: @amgauna <p>
 <p>
-  Site:  <a href="http://www.amgauna.com.br"> http://www.amgauna.com.br </a> br>
-  Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
-<p>
+  Site:  <a href="http://www.amgauna.com.br"> http://www.amgauna.com.br </a> <br>
+  Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a> <p>
   Blog:  <a href="http://anagauna.wordpress.com"> http://anagauna.wordpress.com </a> <br>
-  Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a>
- <p>
-  Linkedin: <a href="https://www.linkedin.com/in/amgauna"> https://www.linkedin.com/in/amgauna </a>
-  <p>
-  Google++:  <a href="https://plus.google.com/u/0/+AnaGaunaTech"> https://plus.google.com/u/0/+AnaGaunaTech </a>
-  <p>
-  Microsoft Technet: <a href="https://social.technet.microsoft.com/profile/ana%20gauna/"> https://social.technet.microsoft.com/profile/ana%20gauna/ </a>
-  <p>
-  Behance: <a href="https://www.behance.net/amgauna"> https://www.behance.net/amgauna </a>
-  <p>
-  Gravatar: <a href="https://pt.gravatar.com/amgauna"> https://pt.gravatar.com/amgauna </a>
+  Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a> <p>
+  Linkedin: <a href="https://www.linkedin.com/in/amgauna"> https://www.linkedin.com/in/amgauna </a> <p>
+  Google++:  <a href="https://plus.google.com/u/0/+AnaGaunaTech"> https://plus.google.com/u/0/+AnaGaunaTech </a> <p>
+  Microsoft Technet: <a href="https://social.technet.microsoft.com/profile/ana%20gauna/"> 
+  https://social.technet.microsoft.com/profile/ana%20gauna/ </a> <p>
+  Behance: <a href="https://www.behance.net/amgauna"> https://www.behance.net/amgauna </a> <p>
+  Gravatar: <a href="https://pt.gravatar.com/amgauna"> https://pt.gravatar.com/amgauna </a> <p>
   <p> </p> <br>
   <span style="color:darkred";>
    <b> <u> Management </u> </b> <br>
