--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <span style="color:darkblue";>
 CNPJ: 029.052.589/0001-53 <br> </span>
 <span style="color:brown";>  
-Microsoft Partner: 5126593 <br> </span>
+Microsoft Partner MPN: 5126593 <br> </span>
   <p> </p>
 Nacionalidade: Brasileira <br>
 Cidade/UF:  Rio de Janeiro/RJ <br>
