--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ GitHUB: @amgauna <p>
    </span>
   * Administração & Controle <br> * Organização & Métodos <br> * Contabilidade & Finanças <br>
   * Direito & Legislação <br> * Psicologia <br> * Matemática Financeira <br> * Estatística <br>
-  * Adminsitração de Projetos <br> * Direito Digital <br> * Privacidade Digital <br> 
+  * Administração de Projetos <br> * Direito Digital <br> * Privacidade Digital <br> 
   * Big Data <br> * Data Analytics <br> * Inteligência Artificial <br> * Data Science <br>
    </span>
     <p> </p>
@@ -99,14 +99,15 @@ GitHUB: @amgauna <p>
  <span style="color:darkred";>
   <b> <u> Sistema Operacional </u> </b> <br>
   </span>
-* Linux <br> * MS-DOS <br> * Windows NT4 Server <br>  * Windows 3.11 <br> * Windows 95 <br> * Windows 98 <br> 
+* Linux <br> * MS-DOS <br> * Windows NT4 Server <br>  * Windows 3.11 <br> * Windows 95 / 98 <br> 
 * Windows 2000 Server <br> * Windows Vista <br> * Windows XP <br>
-* Windows 2012 Server <br>  * Windows 7 <br> * Windows 8 <br> * Windows 2016 Server <br> * Windows 10 <br>  
+* Windows 2012 Server <br>  * Windows 7 <br> * Windows 8.1 <br> * Windows 2016 Server <br> * Windows 10 <br>  
 <p> </p>
   <span style="color:darkred";>
   <b> <u> Banco de Dados </u> </b> <br>
   </span>
 * DBase III Plus <br> * CA-Clipper5 <br>
+* Oracle MySQL Server <br>
 * Microsoft Access <br> * Microsoft FoxPRO <br>
 * Microsof SQL 2000 Server <br>  * Microsof SQL 2008 Server <br> 
 * Microsof SQL 2012 Express <br> * Microsof SQL 2014 Express <br>
@@ -139,7 +140,7 @@ GitHUB: @amgauna <p>
   <b> <u> Programação Web </u> </b> <br>
   </span>
 * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS3 <br> * JavaScript <br> 
-* Bootstrap 3.3.7 <br> * Java <br> * PHP5 <br> * PHP7 <br>  * Wordpress <br> * Blogger <br>
+* Bootstrap 3.3.7 <br> * Oracle Java <br> * PHP5 <br> * PHP7 <br>  * Wordpress <br> * Blogger <br>
  <p> </p>
   <span style="color:darkred";>
   <b> <u> Security </u> </b> <br>
