--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ GitHUB: @amgauna <p>
    </span>
   * Administração & Controle <br> * Organização & Métodos <br> * Contabilidade & Finanças <br>
   * Direito & Legislação <br> * Psicologia <br> * Matemática Financeira <br> * Estatística <br>
-  * Administração de Projetos <br> * Direito Digital <br> * Privacidade Digital <br> 
+  * Administração de Projetos <br> * Direito Digital <br> * Proteção de Dados <br> Privacidade Digital <br> 
   * Big Data <br> * Data Analytics <br> * Inteligência Artificial <br> * Data Science <br>
    </span>
     <p> </p>
