--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
+  <style>   <!--  CSS -->
+		  p:lang(BR) {
+      @charset 'UTF-8';
+      body { font-family: Georgia, Arial, Helvetica, Times, Serif; font-size:medium; }
+	</style>
+  
 </head>
   
 <body>
