--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@ GitHUB: @amgauna <p>
   Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a> <p>
   Linkedin: <a href="https://www.linkedin.com/in/amgauna"> https://www.linkedin.com/in/amgauna </a> <p>
   Google++:  <a href="https://plus.google.com/u/0/+AnaGaunaTech"> https://plus.google.com/u/0/+AnaGaunaTech </a> <p>
+  Microsoft MSDN: <a href="https://social.msdn.microsoft.com/profile/ana%20gauna/"> 
+  https://social.msdn.microsoft.com/profile/ana%20gauna/ </a> <p>
   Microsoft Technet: <a href="https://social.technet.microsoft.com/profile/ana%20gauna/"> 
   https://social.technet.microsoft.com/profile/ana%20gauna/ </a> <p>
   Behance: <a href="https://www.behance.net/amgauna"> https://www.behance.net/amgauna </a> <p>
