--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@ GitHUB: @amgauna <p>
                 
  </div>  <!--  row -->    
  </div>  <!--  container -->
+  <p> <br> </p>
+  <center> | Tudo posso naquele que me fortalece | Tudo posso naquele que me fortalece | Tudo posso naquele que me fortalece | </center> 
+  <p> <br> </p>
  </div>  <!--  section  -->
   
   
