--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ GitHUB: @amgauna <p>
 <p>
   Site:  <a href="http://www.amgauna.com.br"> http://www.amgauna.com.br </a> <br>
   Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a> <p>
-  Blog:  <a href="http://anagauna.wordpress.com"> http://anagauna.wordpress.com </a> <br>
+  Blog:  <a href="http://anagaunatech.wordpress.com"> http://anagauna.wordpress.com </a> <br>
   Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a> <p>
   Linkedin: <a href="https://www.linkedin.com/in/amgauna"> https://www.linkedin.com/in/amgauna </a> <p>
   Google++:  <a href="https://plus.google.com/u/0/+AnaGaunaTech"> https://plus.google.com/u/0/+AnaGaunaTech </a> <p>
