--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@ Skype: amgauna@hotmail.com
 * Instalação de rede wireless <br>
 * SEO / Marketing Digital <br>
 * Criação de Sites e Blogs <br>
-* Edição de Imagem, Logotipo <br>
-Lettering / Banner / Flyer <br>
+* Graphic Designer, Edição de Imagem, redimencionamento de imagens, Logotipo, Lettering, Banner, Flyer, cartazes, etc <br>
 </span>
 <p> </p>
 </div>
@@ -81,14 +80,13 @@ GitHUB: @amgauna <p>
 <p>
   Site:  <a href="http://www.amgauna.com.br"> http://www.amgauna.com.br </a> <br>
   Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a> <p>
-  Blog:  <a href="http://anagaunatech.wordpress.com"> http://anagauna.wordpress.com </a> <br>
   Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a> <p>
   Linkedin: <a href="https://www.linkedin.com/in/amgauna"> https://www.linkedin.com/in/amgauna </a> <p>
-  Google++:  <a href="https://plus.google.com/u/0/+AnaGaunaTech"> https://plus.google.com/u/0/+AnaGaunaTech </a> <p>
   Microsoft MSDN: <a href="https://social.msdn.microsoft.com/profile/ana%20gauna/"> 
   https://social.msdn.microsoft.com/profile/ana%20gauna/ </a> <p>
   Microsoft Technet: <a href="https://social.technet.microsoft.com/profile/ana%20gauna/"> 
   https://social.technet.microsoft.com/profile/ana%20gauna/ </a> <p>
+  Microsoft Tech Profile: <a href="https://techprofile.microsoft.com/pt-br/amgauna">https://techprofile.microsoft.com/pt-br/amgauna</a> <p>
   Behance: <a href="https://www.behance.net/amgauna"> https://www.behance.net/amgauna </a> <p>
   Gravatar: <a href="https://pt.gravatar.com/amgauna"> https://pt.gravatar.com/amgauna </a> <p>
   <p> </p> <br>
@@ -117,9 +115,9 @@ GitHUB: @amgauna <p>
 * DBase III Plus <br> * CA-Clipper5 <br>
 * Oracle MySQL Server <br>
 * Microsoft Access <br> * Microsoft FoxPRO <br>
-* Microsof SQL 2000 Server <br>  * Microsof SQL 2008 Server <br> 
-* Microsof SQL 2012 Express <br> * Microsof SQL 2014 Express <br>
-* Microsof SQL 2008 Server <br>  * Microsof SQL 2016 Server <br> 
+* Microsof SQL Server 2000 <br>  * Microsof SQL Server 2008 <br> 
+* Microsof SQL Server 2012 Express <br> * Microsof SQL Server 2014 Express <br>
+* Microsof SQL Server 2017 Express <br> * Microsoft SQL 2019 Server Express <br>
 <p> </p>
   <span style="color:darkred";>
   <b> <u> Antivírus / SSL </u> </b> <br>
