--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@ GitHUB: @amgauna <p>
   Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a> <p>
   Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a> <p>
   Linkedin: <a href="https://www.linkedin.com/in/amgauna"> https://www.linkedin.com/in/amgauna </a> <p>
-  Microsoft MSDN: <a href="https://social.msdn.microsoft.com/profile/ana%20gauna/"> 
+  Microsoft MSDN: <br> <a href="https://social.msdn.microsoft.com/profile/ana%20gauna/"> 
   https://social.msdn.microsoft.com/profile/ana%20gauna/ </a> <p>
-  Microsoft Technet: <a href="https://social.technet.microsoft.com/profile/ana%20gauna/"> 
+  Microsoft Technet: <br> <a href="https://social.technet.microsoft.com/profile/ana%20gauna/"> 
   https://social.technet.microsoft.com/profile/ana%20gauna/ </a> <p>
-  Microsoft Tech Profile: <a href="https://techprofile.microsoft.com/pt-br/amgauna">https://techprofile.microsoft.com/pt-br/amgauna</a> <p>
+  Microsoft Tech Profile: <br> <a href="https://techprofile.microsoft.com/pt-br/amgauna">https://techprofile.microsoft.com/pt-br/amgauna</a> <p>
   Behance: <a href="https://www.behance.net/amgauna"> https://www.behance.net/amgauna </a> <p>
   Gravatar: <a href="https://pt.gravatar.com/amgauna"> https://pt.gravatar.com/amgauna </a> <p>
   <p> </p> <br>
