--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ GitHUB: @amgauna <p>
  <span style="color:darkred";>
   <b> <u> Sistema Operacional </u> </b> <br>
   </span>
-* Linux <br> * MS-DOS <br> * Windows NT4 Server <br>  * Windows 3.11 <br> * Windows 95 / 98 <br> 
-* Windows 2000 Server <br> * Windows Vista <br> * Windows XP <br>
-* Windows 2012 Server <br>  * Windows 7 <br> * Windows 8.1 <br> * Windows 2016 Server <br> * Windows 10 <br>  
+* Linux <br> * MS-DOS <br> * Windows Server NT4 <br> * Windows 3.11 Workgroups <br> * Windows 95 <br> * Windows 98 <br> 
+* Windows Server 2000 <br> * Windows Vista <br> * Windows XP <br> * Windows 7 <br> * Windows 8.1 <br> * Windows 10 <br>
+* Windows Server 2012 <br> * Windows Server 2016 Essentials <br>  * Windows Server 2019 Essentials <br>
 <p> </p>
   <span style="color:darkred";>
   <b> <u> Banco de Dados </u> </b> <br>
@@ -116,7 +116,7 @@ GitHUB: @amgauna <p>
 * Microsoft Access <br> * Microsoft FoxPRO <br>
 * Microsof SQL Server 2000 <br>  * Microsof SQL Server 2008 <br> 
 * Microsof SQL Server 2012 Express <br> * Microsof SQL Server 2014 Express <br>
-* Microsof SQL Server 2017 Express <br> * Microsoft SQL 2019 Server Express <br>
+* Microsof SQL Server 2017 Express <br> * Microsoft SQL Server 2019 Express <br>
 <p> </p>
   <span style="color:darkred";>
   <b> <u> Antivírus / SSL </u> </b> <br>
