--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <span style="color:darkblue";>
 CNPJ: 029.052.589/0001-53 <br> </span>
 <span style="color:brown";>  
-Microsoft Partner MPN: 5126593 <br> </span>
+Microsoft Partner MPN: 5126593 <br> 
+Cloud Solution Provider (CSP) <br> </span>
   <p> </p>
 Nacionalidade: Brasileira <br>
 Cidade/UF:  Rio de Janeiro/RJ <br>
