--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html lang="BR">
+<html lang="pt-br">
   
 <head>
   <title>Ana Gauna</title>
@@ -13,14 +13,14 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
   <style>   <!--  CSS -->
-      p:lang(BR) {
+      @language 'pt-br';
       @charset 'UTF-8';
       body { font-family: Georgia, Arial, Helvetica, Times, Serif; font-size:medium; }
   </style>
   
 </head>
   
-<body>
+<body style="background:#dddfff; color:#ffffff;>
   
 <div class="section">
      <div class="container">
