--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@ GitHUB: @amgauna <p>
 </div>
 
 <div class="col-md-3">
- <span style="color:darkred";>
+ <span style="color:red";>
   <b> <u> Sistema Operacional </u> </b> <br>
   </span>
 * Linux <br> * MS-DOS <br> * Windows Server NT4 <br> * Windows 3.11 Workgroups <br> * Windows 95 <br> * Windows 98 <br> 
 * Windows Server 2000 <br> * Windows Vista <br> * Windows XP <br> * Windows 7 <br> * Windows 8.1 <br> * Windows 10 <br>
 * Windows Server 2012 <br> * Windows Server 2016 Essentials <br>  * Windows Server 2019 Essentials <br>
 <p> </p>
-  <span style="color:darkred";>
+  <span style="color:red";>
   <b> <u> Banco de Dados </u> </b> <br>
   </span>
 * DBase III Plus <br> * CA-Clipper5 <br>
@@ -131,24 +131,24 @@ GitHUB: @amgauna <p>
 <div class="col-md-2">
  * IBM Lotus 1-2-3 <br>
   <p> </p>
-  <span style="color:darkred";>
+  <span style="color:red";>
   <b> <u> MS Office 365 </u> </b> <br>
   </span>
 * MS Word <br> * MS Excel <br> * PowerPoint <br> * MS Access <br> 
 * MS Visio <br> * MS Project <br>
 <p> </p>
-  <span style="color:darkred";>
+  <span style="color:red";>
   <b> <u> Graphic Design </u> </b> <br>
   </span>
 * Corel Draw <br> * Adobe Photoshop <br> * PaintShop Pro <br>
 <p> </p> 
-  <span style="color:darkred";>
+  <span style="color:red";>
   <b> <u> Programação Web </u> </b> <br>
   </span>
 * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS3 <br> * JavaScript <br> 
 * Bootstrap 3.3.7 <br> * Oracle Java <br> * PHP5 <br> * PHP7 <br>  * Wordpress <br> * Blogger <br>
  <p> </p>
-  <span style="color:darkred";>
+  <span style="color:red";>
   <b> <u> Security </u> </b> <br>
   </span>
   <span style="color:violet";>
