--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <p> </p>
 <span style="color:blue";>
   CRA-RJ: 03-03161 <br> </span>
-<span style="color:darkblue";>
+<span style="color:blue";>
 CNPJ: 029.052.589/0001-53 <br> </span>
 <span style="color:brown";>  
 Microsoft Partner MPN: 5126593 <br> 
@@ -90,7 +90,7 @@ GitHUB: @amgauna <p>
   Microsoft Tech Profile: <br> <a href="https://techprofile.microsoft.com/pt-br/amgauna">https://techprofile.microsoft.com/pt-br/amgauna</a> <p>
   Behance: <a href="https://www.behance.net/amgauna"> https://www.behance.net/amgauna </a> <p>
   <p> </p> <br>
-  <span style="color:darkred";>
+  <span style="color:green";>
    <b> <u> Management </u> </b> <br>
    </span>
   * Administração & Controle <br> * Organização & Métodos <br> * Contabilidade & Finanças <br>
