--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   CRA-RJ: 03-03161 <br> </span>
 <span style="color:blue";>
 CNPJ: 029.052.589/0001-53 <br> </span>
-<span style="color:brown";>  
+<span style="color:blue";>  
 Microsoft Partner MPN: 5126593 <br> 
 Cloud Solution Provider (CSP) <br> </span>
   <p> </p>
@@ -49,11 +49,11 @@ Cidade/UF:  Rio de Janeiro/RJ <br>
   <p> </p>
 <span style="color:green";>
 WhatsApp: +55 (21) 97937-1230 <br>
-</span>
 Hangounts: amgauna@gmail.com <br>
 Skype: amgauna@hotmail.com
+  </span>
   <p> </p>
-<span style="color:blue";>
+<span style="color:brown";>
 * IT Consultant | CEO | CTO <br>
 * Senior Business Systems Analyst <br>
 * Project Business Management <br>
@@ -119,7 +119,7 @@ GitHUB: @amgauna <p>
 * Microsof SQL Server 2012 Express <br> * Microsof SQL Server 2014 Express <br>
 * Microsof SQL Server 2017 Express <br> * Microsoft SQL Server 2019 Express <br>
 <p> </p>
-  <span style="color:darkred";>
+  <span style="color:red";>
   <b> <u> Antivírus / SSL </u> </b> <br>
   </span>
 * Symantec Norton <br> * Kaspersky Security <br> * Intel McAfee Security <br> * ESET Security <br> 
