--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 </head>
   
-<body style="background:#dddfff; color:black;">
+<body style="background:#dddeee; color:black;">
   
 <div class="section">
      <div class="container">
