--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ GitHUB: @amgauna <p>
  </div>  <!--  row -->    
  </div>  <!--  container -->
   <p> <br> </p>
-  <center> <span style="size:20px">| Tudo posso naquele que me fortalece | Rio de Janeiro | Brazil </span> </center> 
+  <center> <span style="size:20px"> ***  Tudo posso naquele que me fortalece | Rio de Janeiro | Brazil  *** </span> </center> 
   <p> <br> </p>
  </div>  <!--  section  -->
   
