--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <!--  <h1> Ana Mercedes Gauna </h1>   -->
   <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50" align="left"> 
 <p> <br> <p> <br> <p>
+  <img src="/amgauna.github.io/alum.gif" width=100% height=auto align="left"> 
 </div>
             
 <div class="col-md-3" align="left">
