--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!--  <h1> Ana Mercedes Gauna </h1>   -->
   <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50" align="left"> 
 <p> <br> <p> <br> <p>
-  <img src="/amgauna.github.io/Alum.gif"> 
+  <img src="/amgauna.github.io/Bar2.gif"> 
 </div>
             
 <div class="col-md-3" align="left">
