--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
      <div class="container">
           <div class="row">
 
-<div class="col-md-12" align="left">
+<div class="col-md-12">
 <p> </p>
   <!--  <h1> Ana Mercedes Gauna </h1>   -->
-  <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50" align="left"> 
+  <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50" align="center"> 
 <p> <br> </p>
-  <img src="/amgauna.github.io/Bar2.gif" width="100%" height="10%" align="left"> 
+  <img src="/amgauna.github.io/Bar2.gif" width="100%" height="10%" align="center"> 
 <p> <br> </p>
 </div>
             
