--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@ GitHUB: @amgauna <p>
  </div>  <!--  row -->    
  </div>  <!--  container -->
   <p> <br> </p>
+  <img src="/amgauna.github.io/Bar2.gif" width="100%" height="10%" align="center"> 
+  <p> <br> </p>
   <center> <span style="size:20px"> ***  Tudo posso naquele que me fortalece | Rio de Janeiro | Brazil  *** </span> </center> 
   <p> <br> </p>
  </div>  <!--  section  -->
