--- a/index.html
+++ b/index.html
@@ -160,14 +160,16 @@ GitHUB: @amgauna <p>
     <p> </p>
 </div>  
 
-                
- </div>  <!--  row -->    
- </div>  <!--  container -->
+  <div class="col-md-12">              
   <p> <br> </p>
   <img src="/amgauna.github.io/Bar2.gif" width="100%" height="10%" align="center"> 
   <p> <br> </p>
   <center> <span style="size:20px"> ***  Tudo posso naquele que me fortalece | Rio de Janeiro | Brazil  *** </span> </center> 
   <p> <br> </p>
+  </div>
+  
+ </div>  <!--  row -->    
+ </div>  <!--  container --> 
  </div>  <!--  section  -->
   
   
