--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 </head>
   
-<body style="background-image:bkg-blue.jpg; color:black;">
+<body background-image="bkg-blue.jpg" style="color:black;">
   
 <div class="section">
      <div class="container">
