--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 </head>
   
-<body background="bkg-blue.jpg" style="color:black;">
+<body background="bkg-blue.jpg">
   
 <div class="section">
      <div class="container">
