--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ GitHUB: @amgauna <p>
   <p> <br> </p>
   <img src="/amgauna.github.io/Bar2.gif" width="100%" height="10%" align="center"> 
   <p> <br> </p>
-  <center> <span style="size:20px"> ***  Tudo posso naquele que me fortalece | Rio de Janeiro | Brazil  *** </span> </center> 
+  <center> <span style="color:darkblue"> <h1> ***  Tudo posso naquele que me fortalece | Rio de Janeiro | Brazil  *** </h1> </span> </center> 
   <p> <br> </p>
   </div>
   
