--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
+  <!-- CSS Menu Dropdown Horizontal - Linha de Código -->
+      <!-- CSS Aqui chamamos o nosso arquivo css externo -->
+      <link rel="stylesheet" type="text/css"  href="css/style-template.css">
+	    <link rel="stylesheet" type="text/css"  href="css/style-menu-dropdown.css">
+	    <link rel="stylesheet" type="text/css"  href="css/style-banner-carousel.css">
+  
   <style>   <!--  CSS -->
-      @language 'pt-br';
       @charset 'UTF-8';
+      @language 'pt-br';
       body { font-family: Georgia, Arial, Helvetica, Times, Serif; font-size:medium; }
   </style>
   
@@ -26,147 +32,65 @@
      <div class="container">
           <div class="row">
 
-<div class="col-md-12">
-<p> </p>
-  <!--  <h1> Ana Mercedes Gauna </h1>   -->
-  <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50" align="center"> 
-<p> <br> </p>
-  <img src="/amgauna.github.io/Bar2.gif" width="100%" height="10%" align="center"> 
-<p> <br> </p>
-</div>
-            
-<div class="col-md-3" align="left">
-<img src="/amgauna.github.io/AnaGauna-2016.jpg" width="150" height="150">  
-  <p> </p>
-<span style="color:blue";>
-  CRA-RJ: 03-03161 <br> </span>
-<span style="color:blue";>
-CNPJ: 029.052.589/0001-53 <br> </span>
-<span style="color:blue";>  
-Microsoft Partner MPN: 5126593 <br> 
-Cloud Solution Provider (CSP) <br> </span>
-  <p> </p>
-Nacionalidade: Brasileira <br>
-Cidade/UF:  Rio de Janeiro/RJ <br>
-  <p> </p>
-<span style="color:green";>
-WhatsApp: +55 (21) 97937-1230 <br>
-Hangounts: amgauna@gmail.com <br>
-Skype: amgauna@hotmail.com
-  </span>
-  <p> </p>
-<span style="color:brown";>
-* IT Consultant | CEO | CTO <br>
-* Senior Business Systems Analyst <br>
-* Project Business Management <br>
-* Analista de Sistemas e Negócios <br>
-* Gestão de Projetos TI <br>
-* Analista de Suporte Técnico Senior <br>
-* Analista Infraestrutura Servidor <br>
-* Suporte Técnico / Data Analytics <br>
-* Manutenção Preventiva <br>
-* Backup/Restore SQL Server <br>
-* Instalação de equipamentos <br>
-* Instalação de aplicativos <br>
-* Instalação de rede wireless <br>
-* SEO / Marketing Digital <br>
-* Criação de Sites e Blogs <br>
-* Graphic Designer, Edição de Imagem, redimencionamento de imagens, Logotipo, Lettering, Banner, Flyer, cartazes, etc <br>
-</span>
-<p> </p>
-</div>
-  
-<div class="col-md-4">
-Twitter: @amgauna @anagaunatech <br>
-Instagram: @amgauna @anagaunatech <br>
-GitHUB: @amgauna <p>
-<p>
-  Site:  <a href="http://www.amgauna.com.br"> http://www.amgauna.com.br </a> <br>
-  Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a> <p>
-  Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a> <p>
-  Linkedin: <a href="https://www.linkedin.com/in/amgauna"> https://www.linkedin.com/in/amgauna </a> <p>
-  Microsoft MSDN: <br> <a href="https://social.msdn.microsoft.com/profile/ana%20gauna/"> 
-  https://social.msdn.microsoft.com/profile/ana%20gauna/ </a> <p>
-  Microsoft Technet: <br> <a href="https://social.technet.microsoft.com/profile/ana%20gauna/"> 
-  https://social.technet.microsoft.com/profile/ana%20gauna/ </a> <p>
-  Microsoft Tech Profile: <br> <a href="https://techprofile.microsoft.com/pt-br/amgauna">https://techprofile.microsoft.com/pt-br/amgauna</a> <p>
-  Behance: <a href="https://www.behance.net/amgauna"> https://www.behance.net/amgauna </a> <p>
-  <p> </p> <br>
-  <span style="color:green";>
-   <b> <u> Management </u> </b> <br>
-   </span>
-  * Administração & Controle <br> * Organização & Métodos <br> * Contabilidade & Finanças <br>
-  * Direito & Legislação <br> * Psicologia <br> * Matemática Financeira <br> * Estatística <br>
-  * Administração de Projetos <br> * Direito Digital <br> * Proteção de Dados <br> * Privacidade Digital <br> 
-  * Big Data <br> * Data Analytics <br> * Inteligência Artificial <br> * Data Science <br>
-   </span>
-    <p> </p>
-</div>
+ <!-- MENU DROPDOWN HORIZONTAL -->
+<nav>
+  <ul class="menu">
+        <li id="Home"><a href="index.html">Home</a></li>
+        <li id="Sobre"><a href="html/sobre.html">Sobre</a>
+		        <ul align="left">
+				    <li><b><i>Sobre mim</i></b></li>
+				    <li><a href="html/curriculo.html">Curriculo</a></li>
+					<li><a href="html/artigos.html">Artigos</a></li>
+				</ul>
+				</li>
+        <li id="Trabalho"><a href="#">Serviço</a>
+                <ul align="left">
+				    <li><b><i>O que fazemos ?</i></b></li>
+                    <li><a href="html/webdeveloper.html">Web Developer</a></li>
+                    <li><a href="html/google-seo.html">SEO</a></li>
+                    <li><a href="html/design-grafico.html">Design Gráfico</a></li>
+                    <li><a href="html/suporte-tecnico.html">Suporte Técnico</a></li>                    
+                </ul>
+                </li>
+        <li id="#Links"><a href="#">Links</a></li>
+		        <ul align="left">
+				    <li><b><i>Links - Profissional Autônoma</i></b></li>
+				    <li><a href="http://www.anagauna.eti.br">Ana Gauna Tech - Website</a></li>
+					<li><a href="https://anagaunatech.blogspot.com">Ana Gauna Tech - Blogspot</a></li>
+					<li><a href="https://facebook.com/anagaunatech">Ana Gauna Tech - Facebook</a></li>
+					<li><a href="https://instagram.com/anagaunatech">Ana Gauna Tech - Instagram</a></li>
+					<li><a href="https://twitter.com/anagaunatech">Ana Gauna Tech - Twitter</a></li>
+					<li><a href="https://linkedin.com/in/amgauna">Ana Gauna Tech - Linkedin</a></li>
+					<li><a href="https://github.com/amgauna">Ana Gauna Tech - GitHUB</a></li>
+					<li><a href="https://behance.net/amgauna">Ana Gauna Tech - Adobe Behance</a></li>
+					<li><a href="https://medium.com/@anagauna">Ana Gauna - Medium</a></li>
+					<p>
+					<li><b><i>Links - Micrompresa (emito nota fiscal)</b></i></li>
+					<li><a href="http://www.amgauna.com.br"> Amgauna Tecnologia - Website</a></li>
+					<li><a href="https://facebook.com/amgauna">Amgauna Tecnologia - Facebook</a></li>
+					<li><a href="https://instagram.com/amgauna">Amgauna Tecnologia - Instagram</a></li>
+					<li><a href="https://twitter.com/amgauna">Amgauna Tecnologia - Twitter</a><li>
+					<p>
+					<li><b><i>MulherTech Management</b></i></li>
+					<li><a href="https://mulhertech.blogspot.com">MulherTech - Blogspot</a></li>
+					<li><a href="http://mulhertech.com.br">MulherTech - Website</a></li>
+				</ul>
+				</li>
+        <li id="#Contato"><a href="#">Contato</a>
+		        <ul>
+					<li><a href="html/contato.html">Contato - Envie uma mensagem</a></li>
+					<li><i>Telefone fixo: +55 (021) 2538-0399 (horário comercial)</i></li>
+                    <li><a href=" ">WhatsApp +55 (021) 97937-1230</a></li>	
+                    <li><a href="mailto:amgauna@gmail.com">email: amgauna@gmail.com</a></li>
+                    <li><a href="mailto:amgauna@outlook.com">email: amgauna@outlook.com</a></li>
+                    <li><a href="mailto:amgauna@yahoo.com">email: yahoo.com</a></li>
+					<li><a href="mailto:anagauna@anagauna.eti.br">email: anagauna@anagauna.eti.br</a></li>
+                    <li><a href="mailto:amgauna@amgauna.com.br">email: amgauna@amgauna.com.br</a></li>					
+                </ul>
+				</li>
+	</ul>
+</nav>
 
-<div class="col-md-3">
- <span style="color:red";>
-  <b> <u> Sistema Operacional </u> </b> <br>
-  </span>
-* Linux <br> * MS-DOS <br> * Windows Server NT4 <br> * Windows 3.11 Workgroups <br> * Windows 95 <br> * Windows 98 <br> 
-* Windows Server 2000 <br> * Windows Vista <br> * Windows XP <br> * Windows 7 <br> * Windows 8.1 <br> * Windows 10 <br>
-* Windows Server 2012 <br> * Windows Server 2016 Essentials <br>  * Windows Server 2019 Essentials <br>
-<p> </p>
-  <span style="color:red";>
-  <b> <u> Banco de Dados </u> </b> <br>
-  </span>
-* DBase III Plus <br> * CA-Clipper5 <br>
-* Oracle MySQL Server <br>
-* Microsoft Access <br> * Microsoft FoxPRO <br>
-* Microsof SQL Server 2000 <br>  * Microsof SQL Server 2008 <br> 
-* Microsof SQL Server 2012 Express <br> * Microsof SQL Server 2014 Express <br>
-* Microsof SQL Server 2017 Express <br> * Microsoft SQL Server 2019 Express <br>
-<p> </p>
-  <span style="color:red";>
-  <b> <u> Antivírus / SSL </u> </b> <br>
-  </span>
-* Symantec Norton <br> * Kaspersky Security <br> * Intel McAfee Security <br> * ESET Security <br> 
-* Trend Micro Security <br> * AVG Security <br> * AVAST Security <br>
- <p> </p>  
-</div>  
- 
-            
-<div class="col-md-2">
- * IBM Lotus 1-2-3 <br>
-  <p> </p>
-  <span style="color:red";>
-  <b> <u> MS Office 365 </u> </b> <br>
-  </span>
-* MS Word <br> * MS Excel <br> * PowerPoint <br> * MS Access <br> 
-* MS Visio <br> * MS Project <br>
-<p> </p>
-  <span style="color:red";>
-  <b> <u> Graphic Design </u> </b> <br>
-  </span>
-* Corel Draw <br> * Adobe Photoshop <br> * PaintShop Pro <br>
-<p> </p> 
-  <span style="color:red";>
-  <b> <u> Programação Web </u> </b> <br>
-  </span>
-* HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS3 <br> * JavaScript <br> 
-* Bootstrap 3.3.7 <br> * Oracle Java <br> * PHP5 <br> * PHP7 <br>  * Wordpress <br> * Blogger <br>
- <p> </p>
-  <span style="color:red";>
-  <b> <u> Security </u> </b> <br>
-  </span>
-  <span style="color:violet";>
-  * <b> ABNT ISO 27000 </b> <br> * <b> ABNT ISO-27001 </b> <br> * <b> ABNT ISO-27002 </b> <br> * <b> ABNT ISO-27003 </b> <br> 
-  </span>
-* Axelos ITIL3 <br> * Isaca Cobit5 <br> * PMI <br> * CompTIA <br>
-    <p> </p>
-</div>  
-
-  <div class="col-md-12">              
-  <p> <br> </p>
-  <img src="/amgauna.github.io/Bar2.gif" width="100%" height="10%" align="center"> 
-  <p> <br> </p>
-  <center> <span style="color:darkblue"> <h1> ***  Tudo posso naquele que me fortalece | Rio de Janeiro | Brazil  *** </h1> </span> </center> 
-  <p> <br> </p>
-  </div>
   
  </div>  <!--  row -->    
  </div>  <!--  container --> 
