--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- CSS Menu Dropdown Horizontal - Linha de Código -->
-    <!-- CSS Aqui chamamos o nosso arquivo css externo -->
+    <!-- CSS Aqui chamamos o nosso arquivo css externo 
     <link rel="stylesheet" type="text/css"  href="css/style-template-2019.css">
     <link rel="stylesheet" type="text/css"  href="css/style-menu-navbar-2019.css">
     <link rel="stylesheet" type="text/css"  href="css/style-banner-carousel-2019.css">
     <link rel="stylesheet" type="text/css"  href="css/style-motion-mp4-2019.css">
-	  	
+	-->
+	
     <!--  CSS / Bootstrap 3.3.7 -->	
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
