--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
     <link rel="stylesheet" type="text/css"  href="css/style-motion-mp4-2019.css">
 	-->
 	
-    <!--  CSS / Bootstrap 3.3.7 -->	
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <!--  CSS / Bootstrap 4.1.3 -->	
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	
-    <!-- AJAX / QUERY / JavaScrip / Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
     <!--  CSS / Font Awesome 4 Icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--  Fim Font Awesome -->
+	
+	<!-- AJAX / QUERY / JavaScrip / Bootstrap -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	
     <!--  <base href="#" target="_self"></base> -->   <!-- base do dominio padrão do website -->
     
