--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <!-- CSS Menu Dropdown Horizontal - Linha de Código 
-    <!-- CSS Aqui chamamos o nosso arquivo css externo   
+    <!-- CSS Menu Dropdown Horizontal - Linha de Código -->
+    <!-- CSS Aqui chamamos o nosso arquivo css externo  --> 
         <!--
     <link rel="stylesheet" type="text/css"  href="css/style-template-2019.css">
     <link rel="stylesheet" type="text/css"  href="css/style-menu-navbar-2019.css">
