--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
      .collapsing é aplicado durante a transição;
      .collapse.show mostra o conteúdo. -->
 	 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
   <a class="navbar-brand" id="Inicio" href="#">Menu</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
