--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	 
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <a class="navbar-brand" id="Inicio" href="#">Menu</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
+  <button class="toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
   </button>
@@ -76,14 +76,14 @@
 		   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sobre
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">		  
-            <a class="dropdown-item" href="sobre-mim.php">
+            <a class="dropdown-item" href="php/sobre-mim.php">
 		    <span class="glyphicon glyphicon-briefcase"><b>Sobre mim</b> </span> </a>
-            <a class="dropdown-item" href="artigos.php"> 
+            <a class="dropdown-item" href="php/artigos.php"> 
 		    <span class="glyphicon glyphicon-th-large"><b>Artigos</b> </span> </a> 					
-            <a class="dropdown-item" href="curriculo.php">Curriculo</a>					
+            <a class="dropdown-item" href="php/curriculo.php">Curriculo</a>					
 		    <a class="dropdown-item" href="api-twitter.php"> 					
 		    <span class="glyphicon glyphicon-cloud"><b>Api Twitter</b> </span> </a>						
-            <a class="dropdown-item" href="http://www.anagauna.eti.br/musicas/musicas.php"> 
+            <a class="dropdown-item" href="/musicas/musicas.php"> 
 		    <span class="glyphicon glyphicon-film"><b>Youtube</b> </span> </a>
         </div>
 		
@@ -93,9 +93,9 @@
 		</a>
 		<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		    <a class="dropdown-item" href="html/webdeveloper.html">Web Developer</a>
-            <a class="dropdown-item" href="html/google-seo.html">SEO</a>
-            <a class="dropdown-item" href="html/design-grafico.html">Design Gráfico</a>
-            <a class="dropdown-item" href="html/suporte-tecnico.html">Suporte Técnico</a>
+            <a class="dropdown-item" href="php/google-seo.php">SEO</a>
+            <a class="dropdown-item" href="php/design-grafico.php">Design Gráfico</a>
+            <a class="dropdown-item" href="php/suporte-tecnico.php">Suporte Técnico</a>
         </div>        
 		
 		<a class="nav-link dropdown-toggle" href="#Liks" id="navbarDropdownMenuLink" role="button"
