--- a/index.html
+++ b/index.html
@@ -46,18 +46,21 @@
 </head>
   
 <body background="img/bkg-blue.jpg">
-  
+ 
+<!--
 <div class="section">
      <div class="container">
           <div class="row">
-
+-->
+	
 <!-- inicio do MENU / Bootstrap -->
 
 <!-- Menu Bootstrap Collapse
      .collapse esconde o conteúdo;
      .collapsing é aplicado durante a transição;
      .collapse.show mostra o conteúdo. -->
-	 
+
+<section>
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <a class="navbar-brand" id="Inicio" href="#">Menu</a>
   <button class="toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
@@ -150,11 +153,11 @@
     </form>
     </ul>
   </div>
-</nav>	 
-	 	 
+</nav>	 	 	 
 	
 <img src="img/AmgaunaConsultoria-2018A.jpg" class="image-responsive" width="100%" height="auto"> 
-     
+</section>
+	
 <!-- ====================================================================================================================== --> 
 
 <main class="principal">
