--- a/index.html
+++ b/index.html
@@ -149,17 +149,20 @@
 			    <a class="dropdown-item" href="mailto:anagauna@anagauna.eti.br">email: anagauna@anagauna.eti.br</a>
                 <a class="dropdown-item" href="mailto:amgauna@amgauna.com.br">email: amgauna@amgauna.com.br</a>					
             </div>
-		</li>
+	</li>
 		
-		<li class="nav-item">
+	    <li class="nav-item">
                 <a class="nav-link disabled" label="login" href="login.php">
-				<span class="glyphicon glyphicon-log-in"><b>Login</b></span> </a>
-        </li>
-    </ul>          
-	<form class="form-inline-right my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-    </form>
+		<span class="glyphicon glyphicon-log-in"><b>Login</b></span> </a>
+             </li>
+	      
+            <li class="nav-item">          
+	        <form class="form-inline-right my-2 my-sm-0">
+                   <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+                   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+                </form>
+	     </li>
+	  
     </ul>
   </div>
 </nav>	 
