--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
              </li>
 	      
             <li class="nav-item">          
-	        <form class="form-inline-right my-2 my-sm-2">
-                   <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+	        <form class="form-inline-right my-2 my-sm-2" width="100%">
+                   <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="O que quer pesquisar?">
                    <button class="btn btn-outline-success my-2 my-sm-2" type="submit">Pesquisar</button>
                 </form>
 	     </li>
