--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <a class="nav-link dropdown-toggle" href="#Contato" id="navbarDropdownMenuLink" role="button"
 	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><b>Contato</b> 
             </a>
-	     div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+	     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="formulario-contato.php"> 
 	        <span class="glyphicon glyphicon-envelope"><b>Envie uma mensagem</b> </span> </a> 
                 <a class="dropdown-item" href="#">Telefone: +55 (021) 2538-0399</a>
