--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
              </li>
 	      
             <li class="nav-item">          
-	        <form class="form-inline-right my-2 my-sm-0" width="100%">
-                   <input class="form-control mr-sm-0" type="search" placeholder="Pesquisar" aria-label="O que quer pesquisar?">
-                   <button class="btn btn-outline-success my-2 my-sm-0"> <input type="submit" value="Pesquisar">Pesquisar</button>
+	        <form class="form-inline-right my-2 my-sm-0" width="100%" align="center">
+                   <input class="form-control mr-sm-0" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+                   <button class="btn btn-outline-success my-2 my-sm-0"> <input type="submit" value="Pesquisar"></button>
                 </form>
 	     </li>
 	  
