--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><b>Sobre</b>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		    <span><u><i>O que quer saber sobre mim?</u></i></span>
+		 <a class="dropdown-item" href="#"><u><i>O que quer saber sobre mim?</u></i></a>
                 <a class="dropdown-item" href="sobre-mim.php">
 		        <span class="glyphicon glyphicon-briefcase">Sobre mim </span> </a>
                 <a class="dropdown-item" href="artigos.php"> 
 		        <span class="glyphicon glyphicon-th-large">Artigos </span> </a> 					
-                <a class="dropdown-item" href="curriculo.php">Curriculo					
+		    <a class="dropdown-item" href="curriculo.php">Curriculo </a>				
 		        <a class="dropdown-item" href="api-twitter.php"> 					
 		        <span class="glyphicon glyphicon-cloud">Api Twitter </span> </a>						
                 <a class="dropdown-item" href="musicas/musicas.php"> 
@@ -99,7 +99,7 @@
                        <span class="glyphicon glyphicon-usd"><b>Trabalho</b> </span> 
 		    </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		        <span><b><i>O que fazemos ? </i></b></span>
+		        <a class="dropdown-item" href="#"><b><i>O que fazemos ? </i></b></a>
 		        <a class="dropdown-item" href="html/webdeveloper.html">Web Developer</a>
                         <a class="dropdown-item" href="html/google-seo.html">SEO</a>
                         <a class="dropdown-item" href="html/design-grafico.html">Design Gráfico</a>
@@ -113,11 +113,11 @@
                        <span class="glyphicon glyphicon-briefcase"><b>Links</b> </span> 
 		    </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		         <span><b>Links (Sites e Rede Social(</b></span>
-		         <span><u><i>Ana Gauna Tech</i></u></span>
+		         <a class="dropdown-item" href="#"><b>Links (Sites e Rede Social(</b></a>
+		         <a class="dropdown-item" href="#"><u><i>Ana Gauna Tech</i></u></a>
 			    <a class="dropdown-item" href="http://www.anagauna.eti.br">Website Pessoal</a>
 			    <a class="dropdown-item" href="https://anagaunatech.blogspot.com">
-			    <span class="glyphicon glyphicon-globe"><b>Blogspot</b> </span> </a>
+			    <span class="glyphicon glyphicon-globe">Blogspot </span> </a>
 			    <a class="dropdown-item" href="https://facebook.com/anagaunatech">Facebook</a>
 			    <a class="dropdown-item" href="https://instagram.com/anagaunatech">Instagram</a>
 			    <a class="dropdown-item" href="https://twitter.com/anagaunatech">Twitter</a>
@@ -125,12 +125,12 @@
 			    <a class="dropdown-item" href="https://github.com/amgauna">GitHUB</a>
 			    <a class="dropdown-item" href="https://behance.net/amgauna">Behance</a>
 			    <a class="dropdown-item" href="https://medium.com/@anagauna">Medium</a>
-			    <span><u><i>Amgauna Tecnologia</u></i></span>
+			    <a class="dropdown-item" href="#"><u><i>Amgauna Tecnologia</u></i></a>
 		            <a class="dropdown-item" href="http://www.amgauna.com.br"> Website Comercial</a>
 			    <a class="dropdown-item" href="https://facebook.com/amgauna">Loja Facebook</a>
 			    <a class="dropdown-item" href="https://instagram.com/amgauna">Instagram</a>
 			    <a class="dropdown-item" href="https://twitter.com/amgauna">Twitter</a>
-			    <span><u><i>Mulher Tech Blog</u></i></span>
+			    <a class="dropdown-item" href="#"><u><i>Mulher Tech Blog</u></i></a>
 			    <a class="dropdown-item" href="https://mulhertech.blogspot.com">Blogspot</a>
 			    <a class="dropdown-item" href="http://mulhertech.com.br">Website</a>
 		    </div>
