--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@
 	      
             <li class="nav-item">          
 	        <form class="form-inline-right my-2 my-sm-0" width="100%" align="center">
-                   <input class="form-control mr-sm-0" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-                   <button class="btn btn-outline-success my-2 my-sm-0"> <input type="submit" value="Pesquisar"></button>
+                   <input class="form-control mr-sm-0" type="search" placeholder="Pesquisar" aria-label="Pesquisar"> <button class="btn btn-outline-success my-2 my-sm-0"> <input type="submit" value="Pesquisar"></button>
                 </form>
 	     </li>
 	  
