--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 		<span class="glyphicon glyphicon-log-in"><b>Login</b></span> </a>
              </li>
 	      
-            <li class="nav-item">          
-	        <form class="form-inline-right my-2 my-sm-0" width="100%" align="center">
+            <li class="nav-item" width="100%" eight="auto" align="right">          
+	        <form class="form-inline-right my-2 my-sm-0">
                    <input class="form-control mr-sm-0" type="search" placeholder="Pesquisar" aria-label="Pesquisar"> <button class="btn btn-outline-success my-2 my-sm-0"> <input type="submit" value="Pesquisar"></button>
                 </form>
 	     </li>
@@ -167,6 +167,9 @@
     </ul>
   </div>
 </nav>	 
+
+	
+<center> <script> document.write(Date()); </script> </center>
 	
 <img src="img/AmgaunaConsultoria-2018A.jpg" class="image-responsive" width="100%" height="auto"> 
 </section>
@@ -174,11 +177,6 @@
 <!-- ====================================================================================================================== --> 
 
 <main class="principal">
-
-<p>
-<center> <script> document.write(Date()); </script> </center>
-<p>	
-
 		  
  </div>  <!--  row -->    
  </div>  <!--  container --> 
