--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@
              </li>
 	      
             <li class="nav-item" width="100%" eight="auto" align="right">          
-	        <form class="form-inline-right my-2 my-sm-0">
-                   <input class="form-control mr-sm-0" type="search" placeholder="Pesquisar" aria-label="Pesquisar"> <button class="btn btn-outline-success my-2 my-sm-0"> <input type="submit" value="Pesquisar"></button>
+	        <form class="form-inline-right">
+                   <input class="form-control" type="text" placeholder="Pesquisar" aria-label="Pesquisar"> 
+		   <button class="btn btn-success" type="submit"><i class="fa fa-search"></button>
                 </form>
 	     </li>
 	  
