--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><b>Sobre</b>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		 <a class="dropdown-item" href="#"><b>O que quer saber sobre mim?</b></a>
+		 <a class="dropdown-item" href="#"><b>O que quer saber?</b></a>
                 <a class="dropdown-item" href="sobre-mim.php">
 		        <span class="glyphicon glyphicon-briefcase">Sobre mim </span> </a>
                 <a class="dropdown-item" href="artigos.php"> 
@@ -113,7 +113,7 @@
                        <span class="glyphicon glyphicon-briefcase"><b>Links</b> </span> 
 		    </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		         <a class="dropdown-item" href="#"><b>Onde é que eu estou?</b></a> 
+		         <a class="dropdown-item" href="#"><b>Onde eu estou?</b></a> 
 			    <a class="dropdown-item" href="http://www.anagauna.eti.br">Ana Gauna - Website Pessoal</a>
 			    <a class="dropdown-item" href="https://anagaunatech.blogspot.com">
 			    <a class="dropdown-item" href="https://facebook.com/anagaunatech">Ana Gauna - Facebook</a>
