--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
 		<span class="glyphicon glyphicon-log-in"><b>Login</b></span> </a>
              </li>
 	      
-            <li class="nav-item" width="100%" eight="auto" align="right">          
-	        <form class="form-inline-right">
-                   <input class="form-control" type="text" placeholder="Pesquisar" aria-label="Pesquisar"> 
-		   <button class="btn btn-success" type="submit"><i class="fa fa-search"></button>
+            <li class="nav-item">          
+	        <form class="form-inline" action="#">
+                   <input type="text" class="form-control" placeholder="search" name="search" aria-label=""> 
+		   <button type="submit"><i class="fa fa-search btn btn-success"></button>
                 </form>
 	     </li>
 	  
