--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 	      
             <li class="nav-item">          
 	        <form class="form-inline" action="#">
-                   <input type="text" class="form-control" placeholder="search" aria-label="Pesquisar"> 
+                   <input type="text" class="form-control" placeholder="Pesquisar" aria-label="search"> 
 			<button type="submit"> <i class="fa fa-search btn btn-success"> </i> </button>
                 </form>
 	     </li>
