--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <li class="nav-item">          
 	        <form class="form-inline" action="#">
                    <input type="text" class="form-control" placeholder="Pesquisar" aria-label="search"> 
-			<button type="submit"> <i class="fa fa-search btn btn-success"> </i> </button>
+			<button type="submit"> <i class="fa fa-search btn-success"> </i> </button>
                 </form>
 	     </li>
 	  
