--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                        <span class="glyphicon glyphicon-briefcase"><b>Links</b> </span> 
 		    </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		         <a class="dropdown-item" href="#"><b>Onde eu estou?</b></a> 
+		         <a class="dropdown-item" href="#"><b>Onde é que eu estou?</b></a> 
+				<a class="dropdown-item" align="left">
 			    <a class="dropdown-item" href="http://www.anagauna.eti.br">Ana Gauna - Website Pessoal</a>
 			    <a class="dropdown-item" href="https://anagaunatech.blogspot.com">
 			    <a class="dropdown-item" href="https://facebook.com/anagaunatech">Ana Gauna - Facebook</a>
@@ -123,12 +124,17 @@
 			    <a class="dropdown-item" href="https://github.com/amgauna">Ana Gauna - GitHUB</a>
 			    <a class="dropdown-item" href="https://behance.net/amgauna">Ana Gauna - Adobe Behance</a>
 			    <a class="dropdown-item" href="https://medium.com/@anagauna">Ana Gauna - Medium</a>
+				</a>
+				<a class="dropdown-item" align="left">
 		        <a class="dropdown-item" href="http://www.amgauna.com.br"> Amgauna Tecnologia - Website Comercial</a>
 			    <a class="dropdown-item" href="https://facebook.com/amgauna">Amgauna Tecnologia - Loja Facebook</a>
 			    <a class="dropdown-item" href="https://instagram.com/amgauna">Amgauna Tecnologia - Instagram</a>
 			    <a class="dropdown-item" href="https://twitter.com/amgauna">Amgauna Tecnologia - Twitter</a>
+				</a>
+				<a class="dropdown-item" align="left">
 			    <a class="dropdown-item" href="https://mulhertech.blogspot.com">MulherTech Blog - Google Blogspot</a>
 			    <a class="dropdown-item" href="http://mulhertech.com.br">MulherTech - Website Comercial</a>
+				</a>
 		    </div>
         </li>
 
