--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                        <span class="glyphicon glyphicon-briefcase"><b>Links</b> </span> 
 		    </a>
-		    <div class="dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-		         <a class="dropdown-item" href="#"><b>Onde eu estou?</b></a> 
+		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+		            <a class="dropdown-item" href="#"><b>Onde eu estou?</b></a> 
 			    <a class="dropdown-item" href="http://www.anagauna.eti.br">Ana Gauna - Website Pessoal</a>
 			    <a class="dropdown-item" href="https://anagaunatech.blogspot.com">
 			    <a class="dropdown-item" href="https://facebook.com/anagaunatech">Ana Gauna - Facebook</a>
@@ -131,7 +131,7 @@
 			    <a class="dropdown-item" href="https://mulhertech.blogspot.com">MulherTech Blog - Google Blogspot</a>
 			    <a class="dropdown-item" href="http://mulhertech.com.br">MulherTech - Website Comercial</a>
 		    </div>
-        </li>
+              </li>
 
         <li class="nav-item active">		
             <a class="nav-link dropdown-toggle" href="#Contato" id="navbarDropdownMenuLink" role="button"
